# nanobind-meson

./: .gitignore  CMakeLists.txt  README.md  meson.build  my_ext.cpp
subprojects/: nanobind.wrap
